--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,6 @@ jobs:
           node-version: 20.x
           cache: "npm"
       - run: npm ci
-      - run: npm run build:prod
+      - run: npm run build --if-present
       - run: npm run test:prod
       - run: npm run lint
